@@ -1,3 +1,8 @@
+Mon Jun 04 05:01:17 GMT 2012  Olly Betts <olly@survex.com>
+
+	* python/smoketest2.py: Add tests that the database factory functions
+	  are wrapped as we expected.
+
 Mon Jun 04 04:47:06 GMT 2012  Olly Betts <olly@survex.com>
 
 	* xapian-headers.i: Fix comment typo.
